# Customer-Support-Dataset

./: README.md  main.py  pyproject.toml  requirements.txt
data/: synthetic_ecommerce_faq.csv
logs/: chat_logs_default.json
src/: data_processing.py  embeddings.py  memory.py  qdrant_client.py  rag_chain.py  redis_memory.py
